# ofxMTAppFramework

./: .gitignore  CMakeLists.txt  README.md  addon_config.mk  ideas.md
examples/simple/: CMakeLists.txt  addons.make  config.make
examples/simple/src/: main.cpp  testApp.cpp  testApp.h
ofxMTAppFramework.xcodeproj/: project.pbxproj
ofxMTAppFramework.xcodeproj/xcshareddata/xcschemes/: ofxMTAppFramework Debug.xcscheme  ofxMTAppFramework Release.xcscheme
src/: .clang-format  .clang-format.old  MTApp.cpp  MTApp.hpp  MTAppFrameworkUtils.cpp  MTAppFrameworkUtils.hpp  MTAppMode.cpp  MTAppMode.hpp  MTAppModePathEditor.cpp  MTAppModePathEditor.hpp  MTCircularView.cpp  MTCircularView.hpp  MTFullScreen.cpp  MTFullScreen.hpp  MTMask.cpp  MTMask.hpp  MTModel.cpp  MTModel.hpp  MTOffscreenWindow.cpp  MTOffscreenWindow.hpp  MTProcedure.cpp  MTProcedure.h  MTThreadChannel.hpp  MTTimer.cpp  MTTimer.hpp  MTUIPath.cpp  MTUIPath.hpp  MTView.cpp  MTView.hpp  MTViewMode.cpp  MTViewMode.hpp  MTViewModePathEditor.cpp  MTViewModePathEditor.hpp  MTWindow.cpp  MTWindow.hpp  MTZoomableDocumentView.cpp  MTZoomableDocumentView.hpp  ModelServer.cpp  ModelServer.hpp  OrthoCamera.cpp  (+18 more)
